# ML-Research-Agent-Evals

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  run_evals.sh  run_mini_evals.sh  setup.py
.github/workflows/: publish.yml
agent_eval/: cli.py  cli_pytorch.py  load_model.py
agent_eval/benchmarks/: __init__.py  bleu.py  final_score.py  latency.py  mmlu.py  parameters.py  perplexity.py  rouge_l.py  tokens_per_second.py
agent_eval/pytorch_benchmarks/: latency.py  model.py  parameters.py  perplexity.py  rouge_l.py  sample.py  tokens_per_second.py
tests/: test_agent_eval.py
